# tcp_communication

./: README.md  bag_record.sh  file_client.py  file_server.py  play_bags.sh  pyproject.toml
agi_logger/: __init__.py  cli.py  config.py  logging_manager.py  ros2_node.py  tcp_transfer.py
agi_logger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cfg/: configs.yaml
